# cinemagoer

./: .gitignore  .hgignore  .hgtags  .python-version  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  CLAUDE.md  CONTRIBUTORS.txt  CONTRIBUTOR_GUIDE.rst  CREDITS.txt  DISCLAIMER.txt  GEMINI.md  MANIFEST.in  Makefile  README.md  README.rst  ez_setup.py  generatepot.py  msgfmt.py  pyproject.toml  rebuildmo.py  requirements.txt  setup.cfg  setup.py  setup.py.ORIG  tox.ini
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
IMDbPY.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: AUTHOR.txt  CONTRIBUTORS.rst  CONTRIBUTORS.txt  CREDITS.rst  CREDITS.txt  Changelog.rst  Changelog.txt  DEPLOY.rst  DEPLOY.txt  DISCLAIMER.rst  DISCLAIMER.txt  FAQS.rst  FAQS.txt  INSTALL.txt  INSTALLATION.rst  INSTALLATION.txt  LICENSE.txt  Makefile  README.adult  README.adult.rst  README.adult.txt  README.companies  README.currentRole  README.currentRole.rst  README.currentRole.txt  README.devel  README.devel.rst  README.devel.txt  README.info2xml  README.info2xml.txt  README.keywords  README.local  README.locale  README.locale.rst  README.locale.txt  README.mobile  README.newparsers  README.package  README.package.rst  README.package.txt  (+34 more)
docs/contributors/: credits.rst  index.rst
docs/devel/: extend.rst  index.rst  json.rst  release.rst  test.rst  translate.rst  webparsers.rst
docs/goodies/: README.txt  download-from-s3  download_applydiffs.py  reduce.sh  s3-reduce
docs/modules/: Character.rst  Company.rst  Movie.rst  Person.rst  _exceptions.rst  _logging.rst  cli.rst  helpers.rst  imdb.rst  linguistics.rst  locale.rst  parser.http.companyParser.rst  parser.http.movieParser.rst  parser.http.personParser.rst  parser.http.rst  parser.http.searchCompanyParser.rst  parser.http.searchKeywordParser.rst  parser.http.searchMovieParser.rst  parser.http.searchPersonParser.rst  parser.http.topBottomParser.rst  parser.http.utils.rst  parser.rst  parser.s3.rst  parser.s3.utils.rst  parser.sql.alchemyadapter.rst  parser.sql.dbschema.rst  parser.sql.rst  utils.rst
docs/usage/: access.rst  adult.rst  character.rst  company.rst  data-interface.rst  index.rst  info2xml.rst  infosets.rst  l10n.rst  movie.rst  person.rst  ptdf.rst  query.rst  quickstart.rst  role.rst  s3.rst  series.rst  tutorial.rst
imdb/: Character.py  Company.py  Movie.py  Person.py  __init__.py  _compat.py  _exceptions.py  _logging.py  articles.py  cli.py  helpers.py  imdbpy2sql.py  linguistics.py  s32imdbpy.py  utils.py  version.py
imdb/locale/: __init__.py  generatepot.py  imdbpy-ar.po  imdbpy-bg.po  imdbpy-de.po  imdbpy-en.po  imdbpy-es.po  imdbpy-fr.po  imdbpy-it.po  imdbpy-pt_BR.po  imdbpy-tr.po  imdbpy.pot  msgfmt.py  rebuildmo.py
imdb/parser/: __init__.py
imdb/parser/common/: __init__.py  cutils.c  locsql.py  ratober.c
imdb/parser/http/: __init__.py  bsoupadapter.py  bsouplxml.py  bsoupxpath.py  characterParser.py  companyParser.py  cookies.json  jextr.py  jsel.py  listParser.py  lxmladapter.py  movieParser.py  personParser.py  piculet.py  searchCharacterParser.py  searchCompanyParser.py  searchKeywordParser.py  searchMovieAdvancedParser.py  searchMovieParser.py  searchPersonParser.py  showtimesParser.py  topBottomParser.py  utils.py
imdb/parser/http/bsouplxml/: _bsoup.py  bsoupxpath.py  etree.py  html.py
imdb/parser/local/: __init__.py  characterParser.py  companyParser.py  movieParser.py  personParser.py  ratober.c  utils.py
imdb/parser/mobile/: __init__.py
imdb/parser/s3/: __init__.py  utils.py
imdb/parser/sql/: __init__.py  alchemyadapter.py  dbschema.py  objectadapter.py
python3-translation-tests/: README.md  simple.py
tests/: advanced.html  conftest.py  partial.db  ruff.toml  test_cli.py  test_get_showtimes.py  test_http_character_main.py  test_http_chart_bottom.py  test_http_chart_boxoffice.py  test_http_chart_popular_movies.py  test_http_chart_popular_tv.py  test_http_chart_top.py  test_http_chart_top_indian.py  test_http_chart_top_tv.py  test_http_company_main.py  test_http_gather_refs.py  test_http_movie_awards.py  test_http_movie_combined.py  test_http_movie_connections.py  test_http_movie_full_credit.py  test_http_movie_goofs.py  test_http_movie_keywords.py  test_http_movie_list.py  test_http_movie_parental_guide.py  test_http_movie_plot.py  test_http_movie_quotes.py  test_http_movie_recommendations.py  test_http_movie_releaseinfo.py  test_http_movie_reviews.py  test_http_movie_season_episodes.py  test_http_movie_series.py  test_http_movie_sites.py  test_http_movie_taglines.py  test_http_movie_tech.py  test_http_movie_titles.py  test_http_movie_trivia.py  test_http_movie_votes.py  test_http_person_awards.py  test_http_person_bio.py  test_http_person_main.py  (+14 more)
