[tool.poetry]
name = "imdbpy"
version = "2021.02.24"
description = "Python package to access the Internet Movie Database (IMDb)"
readme = "README.rst"

authors = ["Davide Alberani <da@erlug.linux.it>"]
license = "GPL-2.0-or-later"

homepage = "https://imdbpy.github.io/"
documentation = "https://imdbpy.readthedocs.io/"
repository = "https://github.com/alberanid/imdbpy"

keywords = [
    "imdb",
    "movie",
    "people",
    "database",
    "cinema",
    "film",
    "person",
    "cast",
    "actor",
    "actress",
    "director",
    "sql",
    "character",
    "company",
    "package",
    "plain text data files",
    "keywords",
    "top250",
    "bottom100",
    "xml"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: Arabic",
    "Natural Language :: Bulgarian",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Italian",
    "Natural Language :: Portuguese (Brazilian)"
    "Natural Language :: Serbian",
    "Natural Language :: Spanish",
    "Natural Language :: Turkish",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "imdb" }
]

include = [
    "imdb/locale/**/*.mo"
]

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.6.2"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
tox = "^3.22.0"

[tool.poetry.scripts]
imdbpy = "imdb.cli:main"

[tool.isort]
line_length = 96
lines_after_imports = 2
known_test = "pytest,unittest"
sections = "TEST,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,38,37,36}, pypy{37,36}, docs
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs:tests}

[testenv:coverage]
basepython = python3.8
deps =
    {[testenv]deps}
    pytest-cov
commands =
    pytest --cov=imdb --cov-report=term-missing tests

[testenv:style]
basepython = python3.8
deps =
    flake8
    flake8-isort
commands =
    flake8 imdb

[testenv:docs]
basepython = python3.8
changedir = docs/
deps =
    sphinx
    sphinx_rtd_theme
commands =
    sphinx-build -b html ./ _build/
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
